--- a/usuarios/usuarios.html
+++ b/usuarios/usuarios.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Usuários de Teste via REST</title>
-    <!-- Incluindo folha de estilos do Bootstrap -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="container bg-warning">
@@ -24,9 +23,7 @@
         </div>
     </div>
     
-    <!-- Incluindo biblioteca JavaScript do Vue.js -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
-    <!-- Incluindo a biblioteca JavaScript do JQuery (se necessário) -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         var app = new Vue({
@@ -41,11 +38,10 @@
             },
             methods: {
                 loadUsers: function() {
-                    // Utilizando Fetch API para obter os dados JSON
                     fetch('https://reqres.in/api/users?per_page=10')
                         .then(response => response.json())
                         .then(data => {
-                            this.users = data.data; // O array de usuários está em data.data
+                            this.users = data.data; 
                         })
                         .catch(error => {
                             console.error('Erro ao carregar usuários:', error);
